# Mega-Man-Acid-Tile-Investigator

./: CMakeLists.txt  CONTRIBUTING.md  README.md  converter.cpp  converter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
